# aelo

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.txt
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
.github/workflows/: documentation.yaml  qa.yaml  stale.yaml
scripts/: scripts.py  tooling.py
scripts/_internal/: issue.py
tests/: sum.rs
tests/python/: runner.py
tests/python/_internal/issue/: test_issue_generate_markdown.py  test_issue_save_local.py
tests/python/scripts/: test_discovery_presenter.py  test_script_discoverer_resolution.py
tests/python/tooling/: test_tool_checker_get_first_line.py  test_tool_checker_verify.py
