[package]
name = "aelo"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
proptest = "1.11.0"

[profile.dev]
opt-level = 1
debug = true
overflow-checks = true
incremental = true

[profile.dev.package."*"]
opt-level = 2

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
